--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-formidable": "^1.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.6",
     "multer": "^1.4.4",
