--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-formidable": "^1.2.0",
+    "express-session": "^1.17.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.6",
-    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "react": "^17.0.2",
     "react-elastic-carousel": "^0.11.5"
   },
   "name": "sliit-mozilla",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js"
   },
